# agro_system

./: .env  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2023_06_15-initiol.py  2023_06_17-initial.py  2023_06_23-add_permissions.py  2023_06_24-add_phone.py  2023_06_27-add_many_to_many.py  2023_06_29-add_rbac.py  2023_07_05-add_relation_to_cities.py  2023_08_05-remove_phone_unique.py  2023_09_09-new_field_in_complains.py  2023_10_09-set_more_chars.py
src/: base.py  config.py  database.py  main.py  models.py
src/admins/: routers.py  schemas.py  services.py
src/auth/: auth_bearer.py  get_permissions.py  hashing.py  routers.py  services.py
src/auth/hashing/: hash.py
src/base_service/: base_service.py
src/categories/: routers.py  schemas.py  services.py
src/cities/: routers.py  schemas.py  services.py
src/complain_statuses/: routers.py  schemas.py  services.py
src/complains/: routers.py  schemas.py  services.py
src/countries/: routers.py  schemas.py  services.py
src/departments/: routers.py  schemas.py  services.py
src/districts/: routers.py  schemas.py  services.py
src/genders/: routers.py  schemas.py  services.py
src/permissions/: routers.py  schemas.py  services.py
src/rights/: routers.py  schemas.py  services.py
src/rigions/: routers.py  schemas.py  services.py
src/roles/: routers.py  schemas.py  services.py
src/statuses/: routers.py  schemas.py  services.py
src/users/: routers.py  schemas.py  services.py
